--- a/helm-charts/renovate-pro/templates/deployment.yaml
+++ b/helm-charts/renovate-pro/templates/deployment.yaml
@@ -56,9 +56,29 @@ spec:
               value: {{ .Values.renovate.renovateToken | quote }}
             {{- end }}
 
+            {{- if .Values.renovate.githubAppId }}
+            - name: GITHUB_APP_ID
+              value: {{ .Values.renovate.githubAppId | quote }}
+            {{- end }}
+
+            {{- if .Values.renovate.githubAppKey }}
+            - name: GITHUB_APP_KEY
+              value: {{ .Values.renovate.githubAppKey | quote }}
+            {{- end }}
+
             {{- if .Values.renovate.githubComToken }}
             - name: GITHUB_COM_TOKEN
               value: {{ .Values.renovate.githubComToken | quote }}
+            {{- end }}
+
+            {{- if .Values.renovate.noNodeTlsVerify }}
+            - name: NODE_TLS_REJECT_UNAUTHORIZED
+              value: '0'
+            {{- end }}
+
+            {{- if .Values.renovate.noGitTlsVerify }}
+            - name: GIT_SSL_NO_VERIFY
+              value: 'true'
             {{- end }}
 
             {{- if .Values.renovate.webhookSecret }}
@@ -69,6 +89,11 @@ spec:
             {{- if .Values.renovate.schedulerCron }}
             - name: SCHEDULER_CRON
               value: {{ .Values.renovate.schedulerCron | quote }}
+            {{- end }}
+
+            {{- if .Values.renovate.logLevel }}
+            - name: LOG_LEVEL
+              value: {{ .Values.renovate.logLevel | quote }}
             {{- end }}
 
             {{- if .Values.postgresql.enabled }}
