--- a/helm-charts/renovate-pro/templates/secret.yaml
+++ b/helm-charts/renovate-pro/templates/secret.yaml
@@ -8,4 +8,4 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 data:
-  .npmrc: {{ .Values.renovate.npmrc | b64enc }}
+  .npmrc: {{ .Values.renovate.npmrc | b64enc | quote }}
